# protondl

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
CLI/: index.html
CLI/10_manage_tools/: index.html
CLI/20_manage_games/: index.html
Library_API/: index.html
assets/javascripts/: bundle.79ae519e.min.js
docs/: index.md
docs/CLI/: 10_manage_tools.md  20_manage_games.md  index.md
docs/Library_API/: index.md
src/protondl/: __init__.py
src/protondl/cli/: helpers.py  main.py
src/protondl/core/: base_installer.py  base_launcher.py  models.py
src/protondl/installers/: __init__.py  dxvk.py  dxvk_async.py  dxvk_nightly.py  ge_proton.py  proton_tkg.py  proton_tkg_valvewine.py  proton_tkg_winemaster.py  vkd3dproton.py  wine_tkg_winemaster.py
src/protondl/launchers/: __init__.py  heroic.py  lutris.py  steam.py
src/protondl/util/: archive.py  download.py  steam.py
stylesheets/: launcher_badges.css
tests/: test_cli_helpers.py
