[project]
name = "protondl"
version = "0.1.0"
description = "Modern Python headless and async-first library and CLI for managing Steam & Linux gaming compatibility tools."
readme = "README.md"
authors = [
    { name = "DavidoTek", email = "54072917+DavidoTek@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "rich>=14.3.3",
    "steam",
    "typer>=0.24.1",
    "vdf",
    "zstandard>=0.25.0",
]

[project.scripts]
protondl = "protondl.cli.main:app"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.ruff]
# Target Python version
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Enable specific rules (Pyflakes, Pycodestyle, isort, etc.)
select = ["E", "F", "I", "N", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
follow_untyped_imports = true
untyped_calls_exclude = ["vdf", "steam"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "protondl.cli.main"
disallow_untyped_decorators = false

[tool.uv.sources]
vdf = { git = "https://github.com/solsticegamestudios/vdf", rev = "v4.0" }
steam = { git = "https://github.com/solsticegamestudios/steam.git", rev = "v1.6.1" }
